added new network fee services, refactor payment and payout